--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.17.9",
     "gsap": "^3.12.4",
     "locomotive-scroll": "^5.0.0-beta.11",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.7",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
